--- a/components/login/login.html
+++ b/components/login/login.html
@@ -11,31 +11,31 @@
                 <form ng-submit="logCtrl.submit()" name="myForm">
 
 
-                    <input type="text" placeholder="Username" class="form-control" ng-model="logCtrl.username" ng-init=" logCtrl.username = 'barnie'"
-                        required ng-minlength="4">
+                    <input type="text" placeholder="Username" class="form-control" ng-model="logCtrl.username" 
+                        required ng-minlength="2">
                     <br>
-                    <div ng-show="logCtrl.recover==false">
+                    <div>
                         <input  type="text" placeholder="password" class="form-control" ng-model="logCtrl.password"
-                            ng-init="logCtrl.password = '1234'" required>
+                            " required>
                         <br>
                         <button type="submit" value="submit" class="btn btn-secondary btn-sm" ng-disabled="myForm.$invalid">Submit</button>
                     </div>
-                    <div ng-if="logCtrl.recover == true">
-                        <button class="btn btn-secondary" ng-click="logCtrl.getPasword()">get authentication question</button>
+                    <!-- <div ng-if="logCtrl.recover == true">
+                        <button class="btn btn-secondary" ng-click="logCtrl.getQ(logCtrl.username)">get authentication question</button>
                         <br>
                         Q1
                         <br>
                         <input type="text" class="form-control" ng-model="logCtrl.ans" placeholder="your answer">
                         <br>
                         <button class="btn btn-secondary" ng-click="logCtrl.submitAns()">Submit</button>
-                    </div>
+                    </div> -->
 
                 </form>
 
                 <div id="go_to_register" ng-show="!login">
                     <a type="link" href="#/reg"> not registered yet?</a>
                     <br>
-                    <a type="link" href="" ng-click="logCtrl.forgot(logCtrl.username)"> forgot your password?</a>
+                    <a type="link" href="" ng-click="logCtrl.forgot()"> forgot your password?</a>
 
                 </div>
 
@@ -44,7 +44,9 @@
         </div>
         <div id="pass-recovery">
             <div ng-if="logCtrl.recover == true">
-                {{logCtrl.question}}
+                    <button class="btn btn-secondary" ng-click="logCtrl.getQ(logCtrl.username)">get authentication question</button>
+                <br>
+                    {{logCtrl.question}}
                 <br>
                 <input type="text" class="form-control" ng-model="logCtrl.ans" placeholder="your answer">
                 <br>
