--- a/style/home.css
+++ b/style/home.css
@@ -3,7 +3,7 @@
     top: 7%;
     width: 100%;
     height: 93%;
-    background-color: cornflowerblue;
+    background-image: url('https://i.ytimg.com/vi/_lQHg7NjZSI/maxresdefault.jpg');
     background-repeat: no-repeat;
     color: black;
     overflow: auto;
