--- a/components/home/home.html
+++ b/components/home/home.html
@@ -25,7 +25,7 @@
         </div>
         <br>
 
-        <div class="visited_poi1" ng-repeat="fav in homCtrl.poiArray">
+        <div  ng-repeat="fav in homCtrl.poiArray">
             <a href="#poiPage" ng-click="homCtrl.selectedSite(fav)">{{fav.name}}</a>
             <br>
             <img ng-style="{'height': '100px'}" ng-src="{{fav.pic}}">
@@ -35,5 +35,15 @@
     </div>
     <div id="noPoi" ng-if="!homCtrl.favExsist">
         <h3>no POIs to present</h3>
+    </div>
+
+    <div class="visited_poi1" ng-repeat="poi in homCtrl.sites">
+       <div ng-repeat="fav in homCtrl.pois" ng-if="poi.id == fav" >
+        <a href="#poiPage" ng-click="homCtrl.selectedSite(poi)">{{poi.name }}</a>
+
+        <img ng-style="{'height': '100px'}" ng-src="{{poi.pic}} ">
+
+       </div>
+        
     </div>
 </div>
