--- a/components/home/home.html
+++ b/components/home/home.html
@@ -4,15 +4,16 @@
     <div id="recomended" class="border">
         <div id="category1">
             {{homCtrl.cats[0]}}
-            <br> {{homCtrl.sites[homCtrl.index1].name}} <br>
+            <br> {{homCtrl.sites[homCtrl.index1].name}}
+            <br>
             <img ng-style="{'height': '100px'}" ng-src="{{homCtrl.sites[homCtrl.index1].pic}} ">
 
-            <br> 
+            <br>
         </div>
         <div id="category2">
             {{homCtrl.cats[1]}}
             <br> {{homCtrl.sites[homCtrl.index2].name}}
-            <br> 
+            <br>
             <img ng-style="{'height': '100px'}" ng-src="{{homCtrl.sites[homCtrl.index2].pic}} ">
 
         </div>
@@ -25,25 +26,27 @@
         </div>
         <br>
 
-        <div  ng-repeat="fav in homCtrl.poiArray">
+        <!-- <div ng-repeat="fav in homCtrl.poiArray">
             <a href="#poiPage" ng-click="homCtrl.selectedSite(fav)">{{fav.name}}</a>
             <br>
             <img ng-style="{'height': '100px'}" ng-src="{{fav.pic}}">
-        </div>
+        </div> -->
 
 
     </div>
     <div id="noPoi" ng-if="!homCtrl.favExsist">
         <h3>no POIs to present</h3>
     </div>
-
+    <div id="poi">
     <div class="visited_poi1" ng-repeat="poi in homCtrl.sites">
-       <div ng-repeat="fav in homCtrl.pois" ng-if="poi.id == fav" >
-        <a href="#poiPage" ng-click="homCtrl.selectedSite(poi)">{{poi.name }}</a>
+        <div ng-repeat="fav in homCtrl.pois" ng-if="poi.id == fav">
+           {{homCtrl.counter ++}}
+            <a href="#poiPage" ng-click="homCtrl.selectedSite(poi)">{{poi.name}}</a>
 
-        <img ng-style="{'height': '100px'}" ng-src="{{poi.pic}} ">
+            <img ng-style="{'height': '100px'}" ng-src="{{poi.pic}} ">
 
-       </div>
-        
+        </div>
+
     </div>
+</div>
 </div>
